# goonr

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yaml  recipe.json
backend/: Cargo.toml  Dockerfile
backend/src/: error.rs  handlers.rs  main.rs  pipeline.rs  routes.rs  scene.rs  state.rs
backend/src/routes/: pipeline.rs  scene.rs
dataset/: Cargo.toml
dataset/src/: config.rs  error.rs  filesystem.rs  formats.rs  lib.rs  scene.rs
dataset/src/formats/: colmap.rs
dataset/src/formats/colmap/: camera.rs  image.rs  input.rs  parse.rs
dataset/src/scene/: image.rs  loader.rs  splat.rs
db/: Cargo.toml
db/src/: lib.rs  repo.rs
desktop/: Cargo.toml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  build.rs  index.html  output.css  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/: components.rs  error.rs  main.rs  route.rs
frontend/src/components/: colmap_upload.rs  file_picker.rs  forms.rs  scene_manager.rs  sidebar.rs  topbar.rs  viewer.rs  viewer_canvas.rs
frontend/src/components/forms/: scene_upload.rs
frontend/src/components/sidebar/: scene_list.rs  scene_upload.rs  scene_upload_btn.rs  scenes.rs
frontend/src/components/viewer/: input.rs  state.rs
frontend/src/pages/: scenes.rs
frontend/src/services/: scene.rs
frontend/src/shaders/: triangle.wgsl
frontend/styles/: input.css
kernel/: Cargo.toml  build.rs
kernel/src/: lib.rs
kernel/src/shaders/: mod.rs  wg.wgsl
ml/: Cargo.toml
ml-cmd/: Cargo.toml
ml-cmd/src/: main.rs
ml/src/: scene.rs
ml/src/scene/: colmap.rs  file.rs
pipeline/: Cargo.toml
pipeline/src/: config.rs  error.rs  eval_export.rs  lib.rs  message.rs  pipeline_stream.rs  train_stream.rs  view_stream.rs
prefix-sum/: Cargo.toml  build.rs
prefix-sum/src/: lib.rs
prefix-sum/src/shaders/: mod.rs  prefix_sum_add_scanned_sums.wgsl
render/: Cargo.toml  build.rs
render-bwd/: Cargo.toml  build.rs
render-bwd/src/: burn_glue.rs  lib.rs  render_bwd.rs
render-bwd/src/shaders/: gather_grads.wgsl  mod.rs  project_backwards.wgsl  rasterize_backwards.wgsl
render/src/: bounding_box.rs  burn_glue.rs  camera.rs  dim_check.rs  gaussian_splats.rs  kernels.rs  lib.rs  render.rs  render_aux.rs  sh.rs  splat.rs
render/src/shaders/: helpers.wgsl  map_gaussian_to_intersects.wgsl  mod.rs  project_forward.wgsl  project_visible.wgsl  rasterize.wgsl  shared.wgsl
renderer/: Cargo.toml
renderer/src/: camera.rs  lib.rs  renderer.rs  sh.rs
scene/: Cargo.toml
scene-source/: Cargo.toml
scene-source/src/: error.rs  filesystem.rs  lib.rs  source.rs
scene/src/: camera.rs  colmap.rs  file.rs  image.rs  input.rs  lib.rs  point3D.rs  scene.rs
scene/src/backends/: colmap.rs
scene/src/colmap/: input.rs  parser.rs
sort/: Cargo.toml  build.rs
sort/src/: lib.rs
sort/src/shaders/: mod.rs
train/: Cargo.toml
train/src/: adam_scaled.rs  config.rs  eval.rs  lib.rs  msg.rs  multinomial.rs  quat_vec.rs  ssim.rs  stats.rs  train.rs
viewer/: Cargo.toml
viewer/src/: camera.rs  error.rs  lib.rs  quad.rs  renderer.rs  resources.rs  splats.rs  surface.rs
viewer/src/resources/: texture.rs
viewer/src/shaders/: preprocess.wgsl  splat.wgsl
web-cmn/: Cargo.toml
web-cmn/src/: lib.rs  pipeline.rs  responses.rs  scene.rs  splats.rs
web-cmn/src/responses/: scene.rs
websplat/: Cargo.toml
websplat/src/: camera.rs  context.rs  error.rs  lib.rs  preprocessor.rs  quad.rs  renderer.rs  sorter.rs  splats.rs  splatter.rs
websplat/src/shaders/: preprocess.wgsl  render.wgsl  sort.wgsl
wgsl/: Cargo.toml
wgsl/src/: codewriter.rs  lib.rs
