[workspace]
resolver = "2"
members = ["backend", "dataset", "db", "desktop/src-tauri", "frontend", "pipeline", "render", "train", "viewer", "web-cmn"]

[workspace.dependencies]
async-trait = "0.1.88"
async-fn-stream = "0.2.2"
futures = "0.3.31"
burn = { version = "0.17.1", features = ["wgpu", "autodiff"] }
burn-fusion = "0.17.1"
burn-wgpu = "0.17.1"
bytemuck = { version = "1.23.0", features = ["derive"] }
glam = { version = "0.30.3", features = ["serde"]}
tokio = { version = "1.45.0", features = ["full"]}
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.27"
anyhow = "1.0.98"
thiserror = "2.0.12"
uuid = { version = "1", features = ["v4", "js", "serde"] }
wgpu = {version = "25.0.0", features = ["webgl", "wgsl", "webgpu"]}

[profile.dev]
debug = true
## The emulator is not really usable without optims so we force them even for
## debug builds
overflow-checks = true

[profile.release]
debug = false
# Disable parallel code generation. Increases build time but can improve
# performance
codegen-units = 1
lto = true
panic = 'abort'
incremental = false
overflow-checks = false
