[package]
name = "backend"
edition = "2021"
version = "0.1.0"

[dependencies]
db = { path = "../db" }
train = { path = "../train" }
web-cmn = { path = "../web-cmn" }
anyhow = { workspace = true }
bytemuck = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
hyper = {  version = "1.4", features = ["server"] }
tempfile = "3"
tower-http = { version = "0.3", features = ["cors", "trace", "limit"] }
zip-extract = { version = "0.4.0", default-features = false }