[package]
name = "backend"
edition = "2021"
version = "0.1.0"

[dependencies]
db = { path = "../db" }
render.path = "../render"
scene-source = { path = "../scene-source" }
pipeline = { path = "../pipeline" }
web-cmn = { path = "../web-cmn" }
anyhow = { workspace = true }
async-fn-stream = { workspace = true }
burn.workspace = true
bytemuck = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.8", features = ["macros", "json", "multipart", "ws"] }
hyper = {  version = "1.4", features = ["server"] }
reqwest = "0.12.15"
tempfile = "3"
tower-http = { version = "0.3", features = ["cors", "trace", "limit"] }
zip-extract = { version = "0.4.0", default-features = false }