[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
viewer = { path = "../viewer" }
web-cmn = { path = "../web-cmn" }
glam.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
futures-util = "0.3.31"
stylist = { version = "0.13.0", features = ["yew_integration"]}
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
web-sys = { workspace = true, features = [
    "KeyboardEvent",
    "MouseEvent",
    "HtmlCanvasElement",
    "HtmlSelectElement",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "console",
    "Request",
    "RequestInit",
    "FormData",
    "Blob"
] }
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2.100"
wasm-logger = "0.2.0"
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-events = "0.2.0"
gloo-file = "0.3.0"
gloo-net = { version = "0.6.0", features = ["websocket"] }

[features]
