[package]
name = "kernel"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
burn.workspace = true
burn-cubecl.workspace = true
bytemuck.workspace = true
naga_oil.workspace = true
wgpu.workspace = true

[build-dependencies]
wgsl = { path = "../wgsl" }
miette = { workspace = true }

[lints]
workspace = true