[package]
name = "prefix-sum"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
kernel.path = "../kernel"
burn.workspace = true
burn-wgpu.workspace = true
burn-cubecl.workspace = true
naga_oil.workspace = true
wgpu.workspace = true

[build-dependencies]
wgsl.path = "../wgsl"
miette.workspace = true

[lints]
workspace = true
