[package]
name = "scene-source"
version = "0.1.0"
edition = "2024"

[dependencies]
path-clean.workspace = true
thiserror = { workspace = true }
serde = { workspace = true }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
tokio = { workspace = true, features = ["io-util", "fs"] }
slab = "0.4.10"
zip = { version = "4.2.0", default-features = false, features = ["deflate", "zstd"] }
