[package]
name = "viewer"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
web-cmn.path = "../web-cmn"
bytemuck.workspace = true
glam.workspace = true
wgpu = { workspace = true, default-features = false, features = ["wgsl", "webgpu"] }
thiserror = { workspace = true }
web-sys = { workspace = true, features = [
    "HtmlCanvasElement"
]}