[package]
name = "websplat"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
web-cmn.path = "../web-cmn"
bytemuck.workspace = true
glam.workspace = true
gloo-console.workspace = true
wgpu = { workspace = true, default-features = false, features = ["wgsl", "webgpu", "webgl"] }
thiserror = { workspace = true }
web-sys = { workspace = true, features = [
    "HtmlCanvasElement",
    "GpuCanvasContext"
]}

